- Created and fixed the ID system, from now on, all ID's will start with an abbreviation of their associated screen (eg. Home screen's day label will be: HSDayLabel, List Activity's list will be: LSList (the 'S' is for screen)). This will apply for everything from views to strings to dimensions. - Created InfoActivity for viewing announcements.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContactActivity" android:label="Contact"/>
-        <activity android:name=".ListActivity" android:label="Events"/>
-        <activity android:name=".AnnouncementActivity" />
-        <activity android:name=".ListViewerActivity" android:label="Teachers"/>
+        <activity
+            android:name=".ContactActivity"
+            android:label="Contact" />
+        <activity
+            android:name=".ListActivity"
+            android:label="Events" />
+        <activity android:name=".contactActivities.AnnouncementActivity" />
+        <activity
+            android:name=".resourceActivities.ListViewerActivity"
+            android:label="Teachers" />
+        <activity android:name=".CalendarActivity" />
+        <activity android:name=".resourceActivities.InfoActivity"></activity>
     </application>
 
 </manifest>
