--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         <activity
             android:name=".resourceActivities.InfoActivity"
             android:label="Information" />
-        <activity android:name=".contactActivities.MusicActivity"></activity>
+        <activity android:name=".contactActivities.MusicActivity" />
+        <activity android:name=".resourceActivities.ClubActivity" />
     </application>
 
 </manifest>
