- Created a UIAlertController Dialog, similar to iOS's version     - Currently only supports title, subtitle, two buttons and a textfield     - With a custom layout file and minor modifications could support anything - Club Leader Edit mode in progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:label="Information" />
         <activity android:name=".contactActivities.MusicActivity" />
         <activity android:name=".resourceActivities.ClubActivity" />
+        <activity android:name=".UserActivity"></activity>
     </application>
 
 </manifest>
