- Created a UIAlertController Dialog, similar to iOS's version     - Currently only supports title, subtitle, two buttons and a textfield     - With a custom layout file and minor modifications could support anything - Club Leader Edit mode in progress - Created rest of the layouts     - User screen         - Is editable already     - Course editing screen         - Is editable by default         - Automatically loads in the required period data - Made a segmented controller for login (and proud of it! :)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
             android:label="Information" />
         <activity android:name=".contactActivities.MusicActivity" />
         <activity android:name=".resourceActivities.ClubActivity" />
-        <activity android:name=".UserActivity"></activity>
+        <activity android:name=".UserActivity" />
+        <activity android:name=".resourceActivities.CourseActvity"></activity>
     </application>
 
 </manifest>
