- Applied new color scheme     - Still needs a few touches - Contact Section re-designed     - Added a 'Report a Bug' section, still needs testing     - Changed the music button to a secret, still need implementation - Home Activity now has the Course Codes and Names in proper order - Created the Course View layout - Calendar is now almost in its complete state     - Now supports calendar caching     - Now also supports caching of day dictionary     - Date label now shows dates in proper format         - With day of date feature implemented as well     - Event Views now dislpay only the information that they need (auto-resize)         - The 'DAY 1'/'DAY 2' events no longer display - Fixed a lot of the XML code to have @style implemented in them - Created the internet checker

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,11 @@
         <activity android:name=".contactActivities.MusicActivity" />
         <activity android:name=".resourceActivities.ClubActivity" />
         <activity android:name=".UserActivity" />
-        <activity android:name=".resourceActivities.CourseActvity"></activity>
+        <activity android:name=".resourceActivities.CourseActvity" />
+
+        <service
+            android:name=".otherClasses.WebCalendar"
+            android:exported="false"></service>
     </application>
 
 </manifest>
