Lost of changes over time, cannot remember all :) - The Check class has now been replaced with Retrieve     - Almost the entire class is implemented except for OneSignal parts     - Its Firebase functionality is also implemented into the lists     - The internet checker function is part of the Retrieve class, its functionality has been redesigned - Lists have been updated     - The lists now order the content arrays in a different, more proper manner     - Chronological and alphabetical ordering is now implemented     - Loading Indicators have been added - AnnouncementActivity is now almost complete     - Visual re-design to resemble the iOS version     - Added the approve/unlock & submit button system     - This activity is not yet finished, still need to implement loading indicators - Auto-login has been redesigned - The default toolbar for all activities has been updated to the Google Material Design version - An android replica of the iOS's Loading Toast has been started - Minor layout changes - OneSignal dependency added to the project - Colors, Styles and Strings values cleaned up

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,11 @@
             android:name=".CalendarActivity"
             android:label="Calendar" />
         <activity
-            android:name=".ListActivity"
-            android:label="Events" />
+            android:name=".lyonsLists.ClubList"
+            android:label="Clubs" />
+        <activity
+            android:name=".lyonsLists.EventList"
+            android:label="Announcements" />
         <activity
             android:name=".ContactActivity"
             android:label="Contact" />
@@ -38,7 +41,7 @@
             android:name=".contactActivities.AnnouncementActivity"
             android:label="Propose Announcement" />
         <activity
-            android:name=".resourceActivities.ListViewerActivity"
+            android:name=".lyonsLists.ListViewerActivity"
             android:label="Teachers" />
         <activity
             android:name=".resourceActivities.InfoActivity"
@@ -50,7 +53,7 @@
 
         <service
             android:name=".otherClasses.WebCalendar"
-            android:exported="false"></service>
+            android:exported="false"/>
     </application>
 
 </manifest>
