--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [onesignal_app_id: "f23c5202-a7ef-4985-b993-4b4c",
+                                // Project number pulled from dashboard, local value is ignored.
+                                onesignal_google_project_number: "REMOTE"]
     }
     buildTypes {
         release {
@@ -23,12 +26,16 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.roomorama:caldroid:3.0.1'
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'com.google.firebase:firebase-storage:9.4.0'
     compile 'com.google.firebase:firebase-messaging:9.4.0'
+    compile 'com.onesignal:OneSignal:3.+@aar'
+    // TODO: FIGURE OUT DEPENDENCIES FOR ONESIGNAL
+//    compile 'com.google.android.gms:play-services-gcm:3.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
