Created Information Form Activity Layout and Java Class with all required elements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,9 @@
 
         <service
             android:name=".otherClasses.WebCalendar"
-            android:exported="false"/>
+            android:exported="false" />
+
+        <activity android:name=".resourceActivities.InformationFormActivity"></activity>
     </application>
 
 </manifest>
