- Help and Licences sections have been implemented     - Appropriate help and licence files must be added - Teacher List sections have been added - ToastView has been fixed - ContactActivity     - extraOptionsToggle bugs have been fixed     - Bug Reporting fixed, must be tested on a physical device

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
             android:name=".otherClasses.WebCalendar"
             android:exported="false" />
 
-        <activity android:name=".resourceActivities.InformationFormActivity"></activity>
+        <activity android:name=".resourceActivities.InformationFormActivity" />
+        <activity android:name=".resourceActivities.TextViewerActivity"></activity>
     </application>
 
 </manifest>
