--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        manifestPlaceholders = [onesignal_app_id: "f23c5202-a7ef-4985-b993-4b4c",
+        manifestPlaceholders = [onesignal_app_id               : "f23c5202-a7ef-4985-b993-4b4c",
                                 // Project number pulled from dashboard, local value is ignored.
                                 onesignal_google_project_number: "REMOTE"]
     }
@@ -24,7 +24,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    // TODO: FIGURE OUT DEPENDENCIES FOR ONESIGNAL
+//    compile 'com.google.android.gms:play-services-gcm:3.0.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.roomorama:caldroid:3.0.1'
@@ -34,8 +35,9 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:9.4.0'
     compile 'com.google.firebase:firebase-messaging:9.4.0'
     compile 'com.onesignal:OneSignal:3.+@aar'
-    // TODO: FIGURE OUT DEPENDENCIES FOR ONESIGNAL
-//    compile 'com.google.android.gms:play-services-gcm:3.0.0'
+    compile 'com.android.support:support-v4:23.4.0'
+    testCompile 'junit:junit:4.12'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
