--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,7 +58,8 @@
             android:exported="false" />
 
         <activity android:name=".resourceActivities.InformationFormActivity" />
-        <activity android:name=".resourceActivities.TextViewerActivity"></activity>
+        <activity android:name=".resourceActivities.TextViewerActivity" />
+        <activity android:name=".resourceActivities.GuideActivity"></activity>
     </application>
 
 </manifest>
