--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.onesignal:OneSignal:3.+@aar'
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile project(':subProjects:Android-SlideExpandableListView')
 }
 
 apply plugin: 'com.google.gms.google-services'
