--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:percent:23.1.1'
     compile 'com.android.support:design:23.4.0'
     compile 'com.roomorama:caldroid:3.0.1'
     compile 'com.google.firebase:firebase-core:9.4.0'
